--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 venv/
 config.py
-echo "media/" >> .gitignore
-echo ".idea/" >> .gitignore
-echo "__pycache__/" >> .gitignore
+media/
+.idea/
+__pycache__/
